--- a/stylesheet/skypepi.zones.portal_z_css.css
+++ b/stylesheet/skypepi.zones.portal_z_css.css
@@ -1,12 +1,84 @@
 /*
  *  Stylesheet
  */
+
+
+/*translation table recolor */
+
+
+
+
+
+
+
+.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+  
+   border: 0px;
+   background: #00a3e4 !important;
+   color: #ffffff !important;
+}
+
+
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+  
+   border: 0px;
+   background: transparent !important;
+   color: #00a3e4 !important;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
+   background: #00a3e4 !important;
+   color: #ffffff !important;
+   border: 0px;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active{
+   background: #00a3e4 !important;
+   color: #ffffff !important;
+   border: 0px;
+}
+
+
+
+
+/*translation table recolor */
+
+
 .spacing-top {
   padding:10px 0;
 }
 
+.translate input {
+  width:100% !important;
+}
+
+#pageNavPosition.pagination {
+	width:100% !important;
+}
+
+#textbox_filter input {
+  background:transparent;
+  width:100%;
+  color:#ffffff;
+  font-size:14px;
+  background-color:#ffffff;
+  color:#818181;
+  padding-left:10px;
+  padding-right:36px;
+  background-image:url('/ttsvr/cropImage/skypepi.images.skypepi_i_searchIcon.png');
+  background-repeat:no-repeat;
+  background-position:95% 50%; 
+  border:1px solid #cccccc;
+  height:34px;
+}
+
+
+.div-bottom {
+  border-bottom:1px solid #cccccc;
+}
+
 .dataTables_length {
-  margin-top: 24px;
+  margin-top: 10px;
 }
 /*
  *  IE Mobile
@@ -25,19 +97,18 @@ body > .container {
 }
 
 .dataTables_filter input {
-  width:97% !important;
+  width:70% !important;
 }
 
 /**.control-label2 {
   padding-top:20px;
 }**/
 
-.roundcont a:hover , .roundcont a:focus{color:#ffffff !important;text-decoration:none !important;}
+.roundcont a:hover , .roundcont a:focus{color:#ffffff !important background:#00a3e4 !important;text-decoration:none !important;}
 
 .paginate_button {
   font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Arial;
-  background-color: #00a3e4 !important;
-  color: #ffffff !important;
+  color: #00a3e4 !important;
   font-size: 16px !important;
   padding: 12px !important;
   cursor: pointer !important;
@@ -400,7 +471,15 @@ margin-left: 24px;
 .footer-temp-push {
     margin-top:300px;
 }
+
+.button-cont .buttonBlue {
+  width:100% !important;
+}
   
+#btnShowArchive.paginate_button {
+    width:100% !important;
+    margin-top:20px;
+  }
   
 .active .navbar-nav li>span {
     display:none !important;
@@ -730,7 +809,6 @@ input:focus {
 }
 
 .portalTable td input {
-  width: 100%;
   background-color: #ffffff;
   border:1px solid #cccccc;
   padding:5px;
@@ -1231,5 +1309,6 @@ font-size:12px;
   font-weight:300;
   color:#5c5c5c;
 }
+
 
 
