fix for sprint 11 British Council

--- a/stylesheet/skypepi.zones.portal_s_ribbon.css
+++ b/stylesheet/skypepi.zones.portal_s_ribbon.css
@@ -1,3 +1,5 @@
+/***** Ribbons *******/
+
 .portal-ribbon {
 	position: relative;
 	/*margin-bottom: 3px;
@@ -434,7 +436,6 @@
 
 .portal-ribbon .lblue.left-edge.fork > span {
 	background-color: #00a3e4;
-	font-weight:normal !important;
 }
 
 .portal-ribbon.ie8 .lblue.left-edge.fork > span {
@@ -970,6 +971,10 @@
 	box-shadows:0 19px 0 #00a3e4;
 }
 
+
+
+
+
 .tsc_ribbon_banner .lred, .tsc_ribbon_banner.ie8 .lred > span {
 	background-color:#f80000;
 }
@@ -1045,4 +1050,5 @@
 .tsc_ribbon_banner .lyellow.curve.fold-up > span:after {
 	box-shadows:0 19px 0 #ffc037;
 }
+
 
