--- a/skypepi/ViewerJS/viewer.css
+++ b/skypepi/ViewerJS/viewer.css
@@ -91,6 +91,8 @@ select {
     color: #F2F2F2;
     line-height: 14px;
     font-family: sans-serif; 
+    /* temporarily display none */
+    display:none;
 }
 #documentName {
     font-size: 14px;
