--- a/stylesheet/skypepi.zones.skypepi_z_tafeCSS.css
+++ b/stylesheet/skypepi.zones.skypepi_z_tafeCSS.css
@@ -17,6 +17,10 @@
   border:0px !important;
 }
 
+.footerBG .navbar-nav li>span {
+	border:0px !important;
+}
+
 .color-white {
   color:#ffffff !important;
 }
@@ -30,19 +34,22 @@
 }
 
 .headerBG {
-  background-color:#66b446;
-  background-image:url('/ttsvr/cropImage/skypepi.images.portal_i_headerBG.jpg');
+  background-color:#ffffff;
   background-repeat:no-repeat;
   background-position:left;
 }
 
 .footerBG {
-  background-color:#66b446;
-  background-image:url('/ttsvr/cropImage/skypepi.images.portal_i_headerBG.jpg');
+  background-color:#E31B23;
   background-repeat:no-repeat;
   background-position:left;
   height:50px;
   padding-top:10px;
+}
+
+.footerBG > .navbar-nav li > span {
+	display:none !important;
+	border:none !important;
 }
 
 body > .container {
@@ -59,7 +66,7 @@ body > .container {
   position: relative;
   min-width: 100%;
   bottom: 0;
-  background-color:#032649;
+  background-color:#000000;
 }
 
 .padding-left-remover {
@@ -145,7 +152,7 @@ body > .container {
   padding: 12px;
   color:#ffffff !important;
   font-size:14px;
-  background-color:#66b446;
+  background-color:#E31B23;
   text-align:center;
   display:block;
   height:47px;
@@ -194,6 +201,20 @@ margin-left: 24px;
   margin-left: -10px;
 }
 
+.footerBG .navbar-nav li:hover:after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  border-left: 0px solid transparent !important;
+  border-right: 0px solid transparent !important;
+  border-bottom: 0px solid #fff !important;
+  margin-left: -10px;
+}
+
 .nivoSlider {
   margin:0 auto !important;
 }
@@ -208,11 +229,11 @@ margin-left: 24px;
 }
 
 .carousel-indicators li {
-  border: 1px solid #66b446 !important;
+  border: 1px solid #E31B23 !important;
 }
 
 .carousel-indicators .active {
-  background-color: #66b446 !important;
+  background-color: #E31B23 !important;
 }
 
 .push-top {
@@ -287,7 +308,7 @@ margin-left: 24px;
 @media screen and (max-width: 768px){
 
 .mobile-push {
-  padding-top:15px;
+  padding-top:0px !important;
   }
 }
 
@@ -326,7 +347,7 @@ margin-left: 24px;
   .magic img {
     height:35px;
     width:auto;
-    margin-top:9px;
+    margin-top:0px;
   }
   
   .magic2 {
@@ -372,7 +393,7 @@ margin-left: 24px;
   }
   
   .navbar-nav li:hover a {
-    background-color:#008bc3 !important;
+    background-color:#E31B23 !important;
   }
   
   .navbar-nav li:hover:after {
@@ -424,7 +445,7 @@ body span {
 }
 
 .userInfo {
-  background-color:#032649;
+  background-color:#000000;
   height:47px;
 }
 
@@ -432,7 +453,7 @@ body span {
   border-right:2px solid #ffffff;
 }
 .userMenu {
-  background-color:#4e4e4e;
+  background-color:#E31B23;
 }
 
 .userMenu a {
@@ -493,7 +514,7 @@ input:focus {
 
 .buttonBlue {
   font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Arial;
-  background-color:#66b446;
+  background-color:#E31B23;
   color:#ffffff;
   font-size:16px;
   border:none;
@@ -561,7 +582,7 @@ input:focus {
 
 
 .portalTable th {
-	background-color:#66b446;
+	background-color:#E31B23;
 	font-size:18px;
 	padding:14px;
 	color:#ffffff;
@@ -590,7 +611,7 @@ input:focus {
 }
 
 .portalTable .blue td {
-	background-color:#e0f4fc;
+	background-color:#f9d1d3;
 }
 
 .portalTable .grey td {
@@ -602,7 +623,7 @@ input:focus {
 .portalTable .plus {
 	height:45px;
 	width:45px;
-	background-color:#66b446;
+	background-color:#E31B23;
 	font-weight:bold;
 	font-size:18px;
 	color:#ffffff;
@@ -674,10 +695,13 @@ border-width:0;
 
 .portalTable a {
 	font-weight:bold;
-	color:#00a2e7;
+	color:#ff202b;
 	font-size:14px;
 }
 
+.regular-link-underline-light-blue {
+	color:#ff202b !important;
+}
 
 /** end custom data table **/
 
@@ -1490,6 +1514,13 @@ font-size:12px;
 .language-selector
 {
  color:#ffffff !important; 
+ font-weight:normal !important;
+}
+
+.language-selector.selected
+{
+ color:#ffffff !important; 
+ font-weight:bold !important;
 }
 
 
@@ -1538,7 +1569,7 @@ font-size:12px;
 
 
 .portal-ribbon .lblue.left-edge.fork > span {
-	background-color: #66b446;
+	background-color: #E31B23;
 	font-weight: normal !important;
 }
 
@@ -1547,7 +1578,7 @@ font-size:12px;
 }
 
 .portal-ribbon .lblue.left-edge.fork > span:after {
-	border-color: #66b446 transparent #66b446 #66b446;
+	border-color: #E31B23 transparent #E31B23 #E31B23;
 }
 
 .portal-ribbon .lblue.left-edge.fork > span:before {
